--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -88,6 +88,23 @@
         {% else %}
             <div class="row">
                 <legend>Components Percentage to CEEQ Score</legend>
+
+            </div>
+            <div id="component_percentage_pie_chart" style="width: 900px; height: 300px;" ></div>
+            {% if project.score > 0 %}
+                <div class="row">
+                    <p style="text-align: center">
+                        Export Graph to:
+                        <button id="png">PNG</button>
+                        <button id="jpeg">JPEG</button>
+                        <button id="pdf">PDF</button>
+                    </p>
+                </div>
+            {% endif %}
+
+            <br>
+            <div class="row">
+                <legend>Components Weighted Factors (Scales: 0 -1)</legend>
                 <p>
                     {% if project.score == -1 %}
                         No created issues
@@ -103,29 +120,12 @@
                         Project CEEQ Score: <strong>{{ project.score }}</strong>
                     {% endif %}
                 </p>
-            </div>
-            <div id="component_percentage_pie_chart" style="width: 1050px; height: 300px;" ></div>
-            {% if project.score > 0 %}
-                <div class="row">
-                    <p style="text-align: center">
-                        Export Graph to:
-                        <button id="png">PNG</button>
-                        <button id="jpeg">JPEG</button>
-                        <button id="pdf">PDF</button>
-                    </p>
-                </div>
-            {% endif %}
-
-            <br>
-            <div class="row">
-                <legend>Components Weighted Factors (Scales: 0 -1)</legend>
                 <p>Standard Component Names: <strong>{{ component_names_standard }}</strong></p>
                 <p>Exist Components Names: <strong>{{ component_names }}</strong></p>
             </div>
 
             {% if weight_factor %}
-                {% if superuser %}
-                    <table class="table table-hover table-striped" id="jira_table" >
+                <table class="table table-hover table-striped" id="jira_table" >
                         <thead>
                             <tr>
                                 <th colspan="3" style="text-align: center; color: brown">Weighted Factor</th>
@@ -181,52 +181,6 @@
                             </tr>
                         </tbody>
                     </table>
-                {% else %}
-                    <table class="table table-hover table-striped" style="width:60%" id="jira_table">
-                        <thead>
-                            <tr>
-                                <th style="background-color: lightcyan; text-align: center;">Component Name</th>
-                                <th style="background-color: lightcyan; text-align: center;">Blocker</th>
-                                <th style="background-color: lightcyan; text-align: center;">Critical</th>
-                                <th style="background-color: lightcyan; text-align: center;">Major</th>
-                                <th style="background-color: lightcyan; text-align: center;">Minor</th>
-                                <th style="background-color: lightcyan; text-align: center;">Trivial</th>
-                                <th style="background-color: lightcyan; text-align: center;">SubTotal</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for component, weight, dd, total, blocker, critical, major, minor, trivial in weight_factor  %}
-                                <tr>
-                                    <td class="col-sm-2" style="text-align: center">{{ component }}</td>
-                                    <td class="col-sm-1" style="text-align: center">{{ blocker }}</td>
-                                    <td class="col-sm-1" style="text-align: center">{{ critical }}</td>
-                                    <td class="col-sm-1" style="text-align: center">{{ major }}</td>
-                                    <td class="col-sm-1" style="text-align: center">{{ minor }}</td>
-                                    <td class="col-sm-1" style="text-align: center">{{ trivial }}</td>
-                                    <td class="col-sm-1" style="text-align: center">{{ total }}</td>
-                                </tr>
-                            {% endfor %}
-                            <tr>
-                                <td>&nbsp;</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td style="text-align: center"><strong>Total</strong></td>
-                                <td style="text-align: center">{{ priority_total.blocker }}</td>
-                                <td style="text-align: center">{{ priority_total.critical }}</td>
-                                <td style="text-align: center">{{ priority_total.major }}</td>
-                                <td style="text-align: center">{{ priority_total.minor }}</td>
-                                <td style="text-align: center">{{ priority_total.trivial }}</td>
-                                <td style="text-align: center">{{ priority_total.total }}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                {% endif %}
             {% endif %}
         {% endif %}
 
@@ -268,7 +222,7 @@
                         // user options
                         var row_label = ['Blocker', 'Critical', 'Major', 'Minor', 'Trivial', 'Subtotal'];
                         var tableTop = 80,
-                            colWidth = 70,
+                            colWidth = 60,
                             tableLeft = 0,
                             rowHeight = 25,
                             cellPadding = 2.5,
@@ -288,7 +242,7 @@
                             )
                             .css({
                                 fontWeight: 'bold',
-                                fontSize: '12pt'
+                                fontSize: '10pt'
                             })
                             .add();
                         });
@@ -307,7 +261,7 @@
                             })
                             .css({
                                 fontWeight: 'bold',
-                                fontSize: '12pt'
+                                fontSize: '10pt'
                             })
                             .add();
                         });
@@ -328,7 +282,7 @@
                                         align: 'center'
                                     })
                                     .css({
-                                        fontSize: '12pt'
+                                        fontSize: '10pt'
                                     })
                                     .add();
                                 }
@@ -425,7 +379,8 @@
                             style: {
                                 fontSize: '18pt',
                                 color: '#000000'
-                            }
+                            },
+                            align: 'left'
                         },
                         tooltip: {
                             //pointFormat: '{series.name}: <b>{point.percentage:.2f}%</b>'
@@ -437,14 +392,15 @@
                             pie: {
                                 allowPointSelect: true,
                                 cursor: 'pointer',
-                                center: ['80%', 100],
-                                size: '70%',
+                                center: ['76%', 100],
+                                size: '65%',
                                 dataLabels: {
                                     enabled: true,
                                     format: '<b>{point.name}</b>: {point.percentage:.2f}%',
                                     style: {
                                         color: (Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black'
-                                    }
+                                    },
+                                    overflow: 'none'
                                 }
                             }
                         },
