change 'VR Apps' to 'West solutions'

--- a/ceeq/apps/core/templates/landing.html
+++ b/ceeq/apps/core/templates/landing.html
@@ -17,8 +17,9 @@
                     <i class="fa fa-sign-in fa-stack-1x fa-inverse"></i>
                 </span>
                 <br><br>
-                Sign in to <span class="text-primary">Quality of Solution</span>
+                Sign into <span class="text-primary">CEEQ Score</span>
             </h3>
+            <p align="center">Comprehensive End to End Quality</p>
             <hr>
             <div>
                 <form class="form" role="form" method=POST action="{% url 'sign_in' %}{% if request.GET.next %}?next={{ request.GET.next }}{% endif %}">
