--- a/ceeq/apps/help/templates/faq.html
+++ b/ceeq/apps/help/templates/faq.html
@@ -10,9 +10,9 @@
             <h3>Q: What is the CEEQ?</h3>
             <p>
                 CEEQ - Comprehensive End-to-End Quality is the novel framework to describe the measurement of
-                IVR Applications based on tracked issues in JIRA system.
+                West developed solutions based on tracked issues in JIRA system.
             </p>
-            <h3>Q: Why I cannot look into the quality score of IVR Apps?</h3>
+            <h3>Q: Why I cannot look into the CEEQ score of West developed solutions?</h3>
             <p>
                 You need log in with your West Credential.
             </p>
@@ -32,22 +32,22 @@
             </ul>
             <h3>Q: What the score's representation?</h3>
             <p>
-                CEEQ ranges from <strong>0 -10</strong> to illustrate the quality of IVR Apps.
-                CEEQ helps our testing procedure on assembled IVR Apps become more quick,
+                CEEQ score ranges from <strong>0 -10</strong> to illustrate the quality of West developed solutions.
+                CEEQ score helps our testing procedure on assembled West developed solutions become more quick,
                 easy and accurate through software lifecycle.
             </p>
             <h3>Q: Why I cannot edit the project information?</h3>
             <p>
                 Only super user has authority to edit project information. General user has
-                the authority to access the quality score of the project.
+                the authority to access the CEEQ score of the project.
             </p>
             <h3>Q: What's the role of JIRA issue's priority?</h3>
             <p>
                 We take different priority of issues as different weighted factor to our framework.
             </p>
             <h3>Q: Why we need Testing Characteristics?</h3>
-            <p>Software Testing Characteristics describe the IVR Applications testing procedure during
-            it's software lifecycle. It will affect quality score of project in some degree.</p>
+            <p>Software Testing Characteristics describe the West developed solutions testing procedure during
+            it's software lifecycle. It will affect CEEQ score of project in some degree.</p>
         </div>
 
     </div>
