--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -46,22 +46,22 @@
                             <div id="introduction_what">
                                 <li><strong>What is CEEQ?</strong></li></p>
                                 <p>Comprehensive End-to-End Quality is the novel framework to describe the measurement of
-                                IVR Applications based on tracked issues in JIRA system.</p>
-                                <p>CEEQ ranges from <strong>0 -10</strong> to illustrate the quality of IVR Apps.
+                                West developed solutions based on tracked issues in JIRA system.</p>
+                                <p>CEEQ ranges from <strong>0 -10</strong> to illustrate the quality of West developed solutions.
                                     CEEQ helps our testing procedure on assembled
-                                IVR Apps become more quick, easy and accurate through software lifecycle.</p>
+                                West developed solutions become more quick, easy and accurate through software lifecycle.</p>
                                 <p>As somebody says: "You cannot control what you cannot measure."
                                     Measurement is the process by which numbers or symbols are assigned
                                     to attributes of entities in the real world in such a way as to describe them
                                     according to clearly defined unambiguous rules</p>
                                 <p>The Risk management of our testing procedure indicates that
-                                    IVR Apps failure has caused more than inconvenience.
+                                    West developed solutions failure has caused more than inconvenience.
                                     The causes have ranged from poorly designed user interface to
                                     direct programming errors.</p>
-                                <p>Also, an IVR application with good structural quality costs
+                                <p>Also, an West developed solutions with good structural quality costs
                                     less to maintain and is easier to understand and change in
                                     response to pressing business needs.</p>
-                                <p>The CEEQ is expected to be useful in evaluating our internal IVR applications
+                                <p>The CEEQ is expected to be useful in evaluating our internal West developed solutions
                                 from begin to end.</p>
                             </div>
 
@@ -75,7 +75,7 @@
 
                             <div id="introduction_resource">
                                 <li><strong>Resources and Setup</strong></li></p>
-                                <p>CEEQ IVR apps monitoring system can be accessed online at
+                                <p>CEEQ West developed solutions monitoring system can be accessed online at
                                     <a href="{% url 'landing' %}">{{ base_url }}{% url 'landing' %}</a> </p>
                                 <p>CEEQ Documentation can be accessed online at
                                 <a href="{% url 'help_guide' %}">{{ base_url }}{% url 'help_guide' %} </a> </p>
@@ -83,7 +83,7 @@
 
                             <div id="introduction_involved">
                                 <li><strong>Getting Involved</strong></li></p>
-                                <p>CEEQ is an novel solution of monitoring our IVR Apps.</p>
+                                <p>CEEQ is an novel solution of monitoring our West developed solutions.</p>
                                 <p>If you do not know where you are now you certainly won’t
                                     know where you will be in the future. So hurry up and start CEEQ now.</p>
                                 <p>Measurement is the process by which numbers or symbols are assigned to attributes of
@@ -95,7 +95,7 @@
 
                     <div id="components_weight">
                         <h4 style="padding-top: 75px; margin-top: -75px;">Components Weight Factor&nbsp;&nbsp;<a href="#index"><i class="fa fa-arrow-circle-up"></i></a></h4>
-                        <p>During the procedure of IVR applications testing, the ration of following components
+                        <p>During the procedure of West developed solutions testing, the ration of following components
                         are considered as (2 : 1 : 3 : 3 : 8 : 3): (alphabet order)</p>
                         <ul>
                             <li>Application</li>
@@ -154,7 +154,7 @@
 
                     <div id="jira_issue_weight">
                         <h4 style="padding-top: 75px; margin-top: -75px;">JIRA Issues Weight Factor&nbsp;&nbsp;<a href="#index"><i class="fa fa-arrow-circle-up"></i></a></h4>
-                        <p>Our framework takes the data from JIRA to evaluate the quality of IVR applications.
+                        <p>Our framework takes the data from JIRA to evaluate the CEEQ score of West developed solutions.
                         We are focus the issue type "Bug", and the following different priority of the issue
                         are taken account into our framework:</p>
                         <ul>
