--- a/ceeq/apps/users/templates/home.html
+++ b/ceeq/apps/users/templates/home.html
@@ -6,9 +6,9 @@
 
         <div class="container" >
             <h1>Comprehensive End to End Quality</h1>
-            <li>A new metric framework to describe the measurement of IVR Solutions</li>
+            <li>A new metric framework to describe the measurement of West Developed Solutions</li>
             <li>A new standard to evaluate the impact of solution defects on the overall quality of the IVR solutions</li>
-            <li>A brand new framework to target the components of IVR Solutions</li>
+            <li>A brand new framework to target the components of West Developed Solutions</li>
             <li>CEEQ score ranges from 0 (product broken) to 10 (product with no known defects)</li>
 
             <br>
