--- a/ceeq/apps/core/templates/base.html
+++ b/ceeq/apps/core/templates/base.html
@@ -120,7 +120,7 @@
                         </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-user"></i> Welcome,
+                                <i class="fa fa-won"></i> Welcome,
                                 {% if user.first_name %}
                                     {{ user.first_name }}
                                 {% else %}
@@ -129,8 +129,9 @@
                                 <i class="fa fa-caret-down"></i>
                             </a>
                             <ul class="dropdown-menu navbar-dropdown-menu">
+                                <li><a href="{% url 'user_settings' %}"><i class="fa fa-gear"></i> User Settings</a> </li>
                                 {% if user.is_superuser %}
-                                    <li><a href="{% url 'user_management' %}">User Management</a> </li>
+                                    <li><a href="{% url 'user_management' %}"><i class="fa fa-wrench"></i> User Management</a> </li>
                                 {% endif %}
                                 <li><a href="{% url 'sign_out' %}"><i class="fa fa-user"></i> Sign Out</a></li>
                             </ul>
