components of framework changed

--- a/ceeq/apps/defects_density/templates/dd_detail.html
+++ b/ceeq/apps/defects_density/templates/dd_detail.html
@@ -26,6 +26,16 @@
 
             <br>
             <div class="row">
+                <legend>CEEQ Score</legend>
+            </div>
+            <div class="row" style="margin-bottom: 10px;">
+                <div class="col-md-1"></div>
+                <div class="col-md-2" style="text-align: left;font-size: 18px;">CEEQ</div>
+                <div class="col-md-8">{{ form.outbound }}</div>
+            </div>
+            <br>
+
+            <div class="row">
                 <legend>Component Defect Density</legend>
             </div>
             <div class="row" style="margin-bottom: 10px;">
@@ -33,11 +43,7 @@
                 <div class="col-md-2" style="text-align: left;font-size: 18px;">CXP</div>
                 <div class="col-md-8">{{ form.cxp }}</div>
             </div>
-            <div class="row" style="margin-bottom: 10px;">
-                <div class="col-md-1"></div>
-                <div class="col-md-2" style="text-align: left;font-size: 18px;">Outbound</div>
-                <div class="col-md-8">{{ form.outbound }}</div>
-            </div>
+
             <div class="row" style="margin-bottom: 10px;">
                 <div class="col-md-1"></div>
                 <div class="col-md-2" style="text-align: left;font-size: 18px;">Platform</div>
