Add south migration package, change db name and location

--- a/ceeq/apps/defects_density/templates/dd_detail.html
+++ b/ceeq/apps/defects_density/templates/dd_detail.html
@@ -31,7 +31,7 @@
             <div class="row" style="margin-bottom: 10px;">
                 <div class="col-md-1"></div>
                 <div class="col-md-2" style="text-align: left;font-size: 18px;">CEEQ</div>
-                <div class="col-md-8">{{ form.outbound }}</div>
+                <div class="col-md-8">{{ form.ceeq }}</div>
             </div>
             <br>
 
