--- a/ceeq/apps/defects_density/templates/dd_list_single.html
+++ b/ceeq/apps/defects_density/templates/dd_list_single.html
@@ -42,7 +42,7 @@
                         <tr>
                             <td class="col-sm-2" style="text-align: center">{{ dd.version }}</td>
                             <td class="col-sm-2" style="text-align: center">{{ dd.created }}</td>
-                            <td class="col-sm-2" style="text-align: center">{{ dd.outbound|floatformat:3 }}</td>
+                            <td class="col-sm-2" style="text-align: center">{{ dd.ceeq|floatformat:3 }}</td>
                             <td class="col-sm-1" style="text-align: center">{{ dd.cxp|floatformat:3 }}</td>
                             <td class="col-sm-1" style="text-align: center">{{ dd.platform|floatformat:3 }}</td>
                             <td class="col-sm-1" style="text-align: center">{{ dd.reports|floatformat:3 }}</td>
