help guide changed upon components updated

--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -96,7 +96,7 @@
                     <div id="components_weight">
                         <h4 style="padding-top: 75px; margin-top: -75px;">Components Weight Factor&nbsp;&nbsp;<a href="#index"><i class="fa fa-arrow-circle-up"></i></a></h4>
                         <p>During the procedure of West developed solutions testing, the ration of following components
-                        are considered as (2 : 1 : 3 : 3 : 8 : 3): (alphabet order)</p>
+                        are considered as <strong>(8 : 2 : 4 : 3 : 3)</strong> - (alphabet order)</p>
                         <ul>
                             <li>Application</li>
                                 <ul>
@@ -112,6 +112,11 @@
                                     </ul>
                                     <li>Web Service</li>
                                     <li>Grammars</li>
+                                    <li>Outbound</li>
+                                    <ul>
+                                        <li>SMS</li>
+                                        <li>Outdial</li>
+                                    </ul>
                                 </ul>
                             <li>CXP - Customer Experience Portal</li>
                                 <ul>
@@ -130,11 +135,7 @@
                                     <li>Voice Browser</li>
                                     <li>Database</li>
                                 </ul>
-                            <li>Outbound</li>
-                                <ul>
-                                    <li>SMS</li>
-                                    <li>Outdial</li>
-                                </ul>
+
                             <li>Reports</li>
                                 <ul>
                                     <li>TXL/BHV Logs</li>
