export CEEQ score trending graph

--- a/ceeq/apps/projects/templates/project_dd_trend.html
+++ b/ceeq/apps/projects/templates/project_dd_trend.html
@@ -26,7 +26,7 @@
 
         {% for version_name in version_names %}
             <h3>Version: {{ version_name }}</h3>
-            <div id="dd_trend_graph_{{ version_name }}"></div>
+            <div id="dd_trend_graph_{{ version_name }}" style="width: 80%; height: 400px;"></div>
         {% endfor %}
 
         <div id="version_key"></div>
