suppress year from trending graph date format

--- a/ceeq/apps/projects/templates/project_ceeq_trend.html
+++ b/ceeq/apps/projects/templates/project_ceeq_trend.html
@@ -12,7 +12,7 @@
 
         {% for version_name in version_names %}
             <h3>Version: {{ version_name }}</h3>
-            <div id="ceeq_trend_graph_{{ version_name }}" style="width: 80%; height: 400px;"></div>
+            <div id="ceeq_trend_graph_{{ version_name }}" style="width: 800px; height: 400px;"></div>
             <div class="row" style="width: 80%;">
                 <p style="text-align: center">
                     Export Graph to:
