--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -142,62 +142,119 @@
             </div>
 
             {% if weight_factor %}
-                <table class="table table-hover table-striped" id="jira_table" >
-                        <thead>
-                            <tr>
-                                <th colspan="3" style="text-align: center; color: brown">Weighted Factor</th>
-                                <th colspan="6" style="text-align: center; color: brown">Number of Issues</th>
-                            </tr>
-                            <tr>
-                                <th style="background-color: lightcyan">Component Name</th>
-                                <th style="background-color: lightcyan">Weight</th>
-                                <th style="background-color: lightcyan">Defect Density</th>
-                                <th style="background-color: lavender; text-align: center">Blocker</th>
-                                <th style="background-color: lavender; text-align: center">Critical</th>
-                                <th style="background-color: lavender; text-align: center">Major</th>
-                                <th style="background-color: lavender; text-align: center">Minor</th>
-                                <th style="background-color: lavender; text-align: center">Trivial</th>
-                                <th style="background-color: lavender; text-align: center">SubTotal</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for component,weight,dd, total, blocker, critical, major, minor, trivial in weight_factor %}
-                                <tr>
-                                    <td class="col-sm-2">{{ component }}</td>
-                                    <td class="col-sm-1">{{ weight|floatformat:3 }}</td>
-                                    <td class="col-sm-2">{{ dd|floatformat:3 }}</td>
-                                    <td class="col-sm-1" style="text-align: center">{{ blocker }}</td>
-                                    <td class="col-sm-1" style="text-align: center">{{ critical }}</td>
-                                    <td class="col-sm-1" style="text-align: center">{{ major }}</td>
-                                    <td class="col-sm-1" style="text-align: center">{{ minor }}</td>
-                                    <td class="col-sm-1" style="text-align: center">{{ trivial }}</td>
-                                    <td class="col-sm-1" style="text-align: center">{{ total }}</td>
-                                </tr>
-                            {% endfor %}
-                            <tr>
-                                <td>&nbsp;</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td><strong>Total</strong></td>
-                                <td></td>
-                                <td></td>
-                                <td style="text-align: center">{{ priority_total.blocker }}</td>
-                                <td style="text-align: center">{{ priority_total.critical }}</td>
-                                <td style="text-align: center">{{ priority_total.major }}</td>
-                                <td style="text-align: center">{{ priority_total.minor }}</td>
-                                <td style="text-align: center">{{ priority_total.trivial }}</td>
-                                <td style="text-align: center">{{ priority_total.total }}</td>
-                            </tr>
-                        </tbody>
-                    </table>
+               <table class="table table-hover table-striped" id="factor_table" >
+                <thead>
+                    <tr>
+                        <th colspan="3" style="text-align: center; color: brown">Weighted Factor</th>
+                        <th colspan="16" style="text-align: center; color: brown">Number of Issues</th>
+                    </tr>
+                    <tr>
+                        <th style="background-color: lightcyan">Component Name</th>
+                        <th style="background-color: lightcyan">Weight</th>
+                        <th style="background-color: lightcyan">Defects Density</th>
+
+                        <th colspan="3" style="background-color: lavender; text-align: center">Blocker</th>
+                        <th colspan="3" style="background-color: lavender; text-align: center">Critical</th>
+                        <th colspan="3" style="background-color: lavender; text-align: center">Major</th>
+                        <th colspan="3" style="background-color: lavender; text-align: center">Minor</th>
+                        <th colspan="3" style="background-color: lavender; text-align: center">Trivial</th>
+                        <th style="background-color: lavender; text-align: center">SubTotal</th>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+
+
+                        <th style="background-color: cadetblue">O</th>
+                        <th style="background-color: cadetblue">R</th>
+                        <th style="background-color: cadetblue">C</th>
+
+                        <th style="background-color: antiquewhite">O</th>
+                        <th style="background-color: antiquewhite">R</th>
+                        <th style="background-color: antiquewhite">C</th>
+
+                        <th style="background-color: cadetblue">O</th>
+                        <th style="background-color: cadetblue">R</th>
+                        <th style="background-color: cadetblue">C</th>
+
+                        <th style="background-color: antiquewhite">O</th>
+                        <th style="background-color: antiquewhite">R</th>
+                        <th style="background-color: antiquewhite">C</th>
+
+                        <th style="background-color: cadetblue">O</th>
+                        <th style="background-color: cadetblue">R</th>
+                        <th style="background-color: cadetblue">C</th>
+
+                        <th style="background-color: antiquewhite"></th>
+
+              </tr>
+                </thead>
+                <tbody>
+                    {% for component,weight,dd, total, b_c, b_o, b_r, c_c, c_o, c_r, m_c, m_o, m_r, mi_c, mi_o, mi_r, t_c, t_o, t_r in weight_factor %}
+                        <tr>
+                            <td>{{ component }}</td>
+                            <td>{{ weight|floatformat:3 }}</td>
+                            <td>{{ dd|floatformat:3 }}</td>
+
+
+                            <td>{{ b_o }}</td>
+                            <td>{{ b_r }}</td>
+                            <td>{{ b_c }}</td>
+
+                            <td>{{ c_o }}</td>
+                            <td>{{ c_r }}</td>
+                            <td>{{ c_c }}</td>
+
+                            <td>{{ m_o }}</td>
+                            <td>{{ m_r }}</td>
+                            <td>{{ m_c }}</td>
+
+                            <td>{{ mi_o }}</td>
+                            <td>{{ mi_r }}</td>
+                            <td>{{ mi_c }}</td>
+
+                            <td>{{ t_o }}</td>
+                            <td>{{ t_r }}</td>
+                            <td>{{ t_c }}</td>
+
+                            <td style="text-align: center;">{{ total }}</td>
+                        </tr>
+                    {% endfor %}
+                <tr>
+                    <td>&nbsp;</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><strong>Total</strong></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td style="text-align: center">{{ priority_total.blocker }}</td>
+                    <td></td>
+                    <td></td>
+                    <td style="text-align: center">{{ priority_total.critical }}</td>
+                    <td></td>
+                    <td></td>
+                    <td style="text-align: center">{{ priority_total.major }}</td>
+                    <td></td>
+                    <td></td>
+                    <td style="text-align: center">{{ priority_total.minor }}</td>
+                    <td></td>
+                    <td></td>
+                    <td style="text-align: center">{{ priority_total.trivial }}</td>
+                    <td></td>
+                    <td style="text-align: center">{{ priority_total.total }}</td>
+                </tr>
+                </tbody>
+                </table>
             {% endif %}
         {% endif %}
 
