--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -114,7 +114,7 @@
             <div class="row">
                 <legend>Components Percentage to CEEQ Score</legend>
             </div>
-            <div id="component_percentage_pie_chart" style="width: 1000px; height: 300px;" >
+            <div id="component_percentage_pie_chart" style="width: 1000px; height: 600px;" >
                 <div class="loading" style="text-align:center ;margin-top: 100px;">
                     <i class="fa fa-spinner fa-2x fa-spin"></i>
                     Loading data from JIRA Database...
@@ -295,8 +295,8 @@
 
                         // user options
                         var row_label = ['Blocker', 'Critical', 'Major', 'Minor', 'Trivial', 'Subtotal'];
-                        var tableTop = 80,
-                            colWidth = 60,
+                        var tableTop = 300,
+                            colWidth = 40,
                             tableLeft = 0,
                             rowHeight = 25,
                             cellPadding = 2.5,
@@ -309,6 +309,7 @@
 
                         // draw components lables
                         $.each(data[1], function(i, item) {
+                            //console.log(item);
                             renderer.text(
                                 item[0],
                                 cellLeft + cellPadding,
@@ -323,7 +324,7 @@
 
                         // draw jira priority lables
                         $.each(row_label, function(i, item) {
-                            cellLeft += colWidth;
+                            cellLeft += colWidth * 3;
 
                             renderer.text(
                                 item,
@@ -341,7 +342,7 @@
                         });
 
                         $.each(data[1], function(row, item){
-                            cellLeft = tableLeft;
+                            cellLeft = tableLeft + colWidth;
 
                             // apply number of jiras
                             $.each(item, function(i, priority){
@@ -367,14 +368,14 @@
                                     renderer,
                                     tableLeft,
                                     tableTop + cellPadding,
-                                    cellLeft + colWidth,
+                                    cellLeft + colWidth * 1.5,
                                     tableTop + cellPadding
                                 );
                                 Highcharts.tableLine( // bottom
                                     renderer,
                                     tableLeft,
                                     tableTop + (data[1].length + 1) * rowHeight + cellPadding,
-                                    cellLeft + colWidth,
+                                    cellLeft + colWidth * 1.5,
                                     tableTop + (data[1].length + 1) * rowHeight + cellPadding
                                 );
                             }
@@ -383,7 +384,7 @@
                                 renderer,
                                 tableLeft,
                                 tableTop + row * rowHeight + rowHeight + cellPadding,
-                                cellLeft + colWidth,
+                                cellLeft + colWidth * 1.5,
                                 tableTop + row * rowHeight + rowHeight + cellPadding
                             );
                         });
@@ -466,8 +467,8 @@
                             pie: {
                                 allowPointSelect: true,
                                 cursor: 'pointer',
-                                center: ['77%', 100],
-                                size: '70%',
+                                center: ['50%', 100],
+                                size: '30%',
                                 dataLabels: {
                                     enabled: true,
                                     format: '<b>{point.name}</b>: {point.percentage:.2f}%',
