export chart to pdf extra page

--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -544,6 +544,7 @@
                     chart.exportChart({
                         type: 'application/pdf',
                         scale: 1,
+                        width: 550,
                         filename: export_filename
                     });
                 });
